# ChangeLog for app-i18n/mozc
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-i18n/mozc/ChangeLog,v 1.13 2015/03/06 06:30:28 naota Exp $

  06 Mar 2015; Naohiro Aota <naota@gentoo.org> mozc-2.16.2037.102.ebuild:
  Add handwriting dependency; add Qt immodule dependency

*mozc-2.16.2037.102 (25 Feb 2015)

  25 Feb 2015; Naohiro Aota <naota@gentoo.org> +mozc-2.16.2037.102.ebuild:
  Version bump

  05 Jun 2014; Naohiro Aota <naota@gentoo.org>
  +files/mozc-1.13.1651.102-gtk-renderer.patch, mozc-1.13.1651.102.ebuild:
  Add upstream patch #512248

*mozc-1.13.1651.102 (01 Jun 2014)

  01 Jun 2014; Naohiro Aota <naota@gentoo.org> +mozc-1.13.1651.102.ebuild:
  version bump #484128

*mozc-1.10.1390.102-r1 (25 Dec 2013)

  25 Dec 2013; Naohiro Aota <naota@gentoo.org> +files/mozc-ibus-1.5.4.patch,
  +mozc-1.10.1390.102-r1.ebuild, -mozc-1.10.1390.102.ebuild:
  Apply ibus-1.5.4 patch

  28 Jul 2013; Naohiro Aota <naota@gentoo.org> mozc-1.10.1390.102.ebuild:
  Drop miss-added dep to dev-libs/protobuf. #478094

  20 Jul 2013; Naohiro Aota <naota@gentoo.org> mozc-1.10.1390.102.ebuild,
  mozc-1.6.1187.102.ebuild:
  Update license wrt #471010

  10 May 2013; Naohiro Aota <naota@gentoo.org> mozc-1.10.1390.102.ebuild:
  Call epatch_user

*mozc-1.10.1390.102 (04 May 2013)

  04 May 2013; Naohiro Aota <naota@gentoo.org>
  +files/mozc-1.10.1390.102-drop-Werror.patch, +mozc-1.10.1390.102.ebuild:
  Version bump wrt #465204

  02 Mar 2013; Markos Chandras <hwoarang@gentoo.org> mozc-1.3.975.102.ebuild,
  mozc-1.5.1090.102.ebuild, mozc-1.6.1187.102.ebuild:
  Move Qt dependencies to the new category

*mozc-1.6.1187.102 (02 Oct 2012)

  02 Oct 2012;  <naota@gentoo.org> +mozc-1.6.1187.102.ebuild:
  Version bump. #433730

  23 Jul 2012; Naohiro Aota <naota@gentoo.org> mozc-1.3.975.102.ebuild,
  mozc-1.5.1090.102.ebuild:
  Don't use MY_P anymore.

  10 Jul 2012; Naohiro Aota <naota@gentoo.org> ibus-mozc-1.5.1090.102.ebuild: