@@ -7,6 +7,7 @@ AUX mozc-1.13.1651.102-gtk-renderer.patch 547 SHA256 6daa6d077dffbcc133f49745bce
 AUX mozc-1.2.809.102-gentoo.patch 652 SHA256 2a06a2f9430a1e1407288d535c41b54b6cef1e9488b92e484f8d4cb86eeb0494 SHA512 2289f38bf9790b5c3cb9396a284afb31f8b1d083148cf2bbfdfc23897033acf4445b4e421161d412a89a58e031f39cdb6fa141b3dc5c8eb9cc68e56a4d19f179 WHIRLPOOL e0e9fccc93af82683c8285cf0d9d2495a9273c4b8a2dbf41bd0ca6eaf7ccd1a470a6c507cf1134d689808a48596c23f51ed9cfdecb3d13ddcb9921e1f3cdc33e
 AUX mozc-1.3.975.102-ibus-1.4.patch 2048 SHA256 4f205c990e2f447bf1bdea8a820f90361a69cf9883d1ea902d6ae097a18fb291 SHA512 8fea1256155f99ab31f7ab6e29e9244c4e112710c52c73fc78c48aa622dbca36906916ff877d3c9416ee4e2d5d8d33ca9be1af1430217599696efa18c3e63001 WHIRLPOOL 89c7b02a692b500ea31b79c34e2d3b403b315d0c9ac13fd73eaf1eb7ecb12a728e40574f3c6efc69fd86afbda3ba664c3a8eb2ec3f2305d2afb370d9a13de548
 AUX mozc-ibus-1.5.4.patch 10078 SHA256 8164b72ef41800f4327bf4571fa788ce927511c42c6026936a48823a76466511 SHA512 4b2c8027409acac0c70dc1b665ba2cb103bf37ac4e808c9f102e7f860d17fa5bb376d7d9bbe52b255bba87918118002eb85094b74ab70c879410ed32b5f3557e WHIRLPOOL 3850def4d1602ed594369ca8963a776a1d72d0cb008bc374779fb6fdb012c921edc0ea67388df96773c2004addcc238f0b9edb80357b4b0a115800a011eddb7f
+DIST fcitx-mozc-2.16.2037.102.2.patch 140421 SHA256 ff175f3e0301c33f750780765ea264887827d00bc7a59fc8b55ae514ba449a1e SHA512 22b885859588bb8e0efd354d153da461a654203729c723156a419bf33fae473e3f7165964aa3cb3b5c969f97c2727f9d87b0d587330e4eeab67f07d4458542a3 WHIRLPOOL cd9534c8904a7c9f866a8ddd41ab4c57b3ad8b5650fda4cf9ccc1e544c8e0da25c749870606687ee66e4252f224babdbe10415e035038ced654812bad8d299dc
 DIST gmock-1.6.0.zip 2053682 SHA256 341ad07c31c619ba32c88c2265bc23693da1df062f47f146a7ed340f646d82b7 SHA512 7adff00bb6ff81a6ffb704be71d0747636d69e24b4a8b709e1fb8c177a9a47f6dea8d14fde73034ebfb1529c291c7212a944ad92a34f88abdfe23c2d0b11b6f7 WHIRLPOOL 1a03ff8f2d96287f5deb24f970688f20f3480e77a4a71089ef1399a87f28f616bf0feaedc217e7ac1ca8ca1246e53f5d882f350704be111ae547961949939530
 DIST gtest-1.6.0.zip 1121697 SHA256 5ec97df8e75b4ee796604e74716d1b50582beba22c5502edd055a7e67a3965d8 SHA512 f4718dfbfa3339bb9449c3f14e5b44ae405ea7df64c10a0957a6300985b71c4642981d069a1382e27ae041a4e2873527a9e442aff978447e795a190f99fac115 WHIRLPOOL 745a49020d4353ed2fa38adfc80bbd777358c831719bbe3b7c90d243f84256615222ba5f04d48d98b9e1a803bb40766799b3aedd575024c19d853d9239a12f8a
 DIST gyp-20140602.tar.bz2 432422 SHA256 f67be748f4dc36aa1619f43d4624c746728cf268af7f4ebf78dab3fa6d43d973 SHA512 e3a59daac57ddafc5804384c01cf51d4b90cd119d263afd83ec6eef9239c38bc7715736f70e20e44fae04fd8be1b86aa5323908a92d574372aa298f3355ce15f WHIRLPOOL 17e4630dcd7592e8ee197b4130d6147d9fd63404938f62e08ad10a204bd4bddcfc7d394abf3572a337e3dea46d4a7361dbc0cccc02e07ab99ed8f90e80830451
@@ -25,23 +26,23 @@ EBUILD mozc-1.13.1651.102.ebuild 5111 SHA256 d9875f0db91422f9aa1e55414cd5fff804a
 EBUILD mozc-1.3.975.102.ebuild 4383 SHA256 281dca5a4704df212a07e616db4779f9f241c600c4c026d8092a6604a5388d09 SHA512 34e6be151e59f79232b7bd352081f87b061841d26238a5e737c1b4be96d0206fd9d73c2dfd0623eb4efcff4610da604faa00dced14d21e6a4cc84e52110f1022 WHIRLPOOL cbf87dc98060bf4a86112ab1aff0c1571d3acd478f84d83b8e5885100833a8ec963e5c0c95eaa4218c141824d11b6c773a5a2b78acaaa304763e1557930710d2
 EBUILD mozc-1.5.1090.102.ebuild 4833 SHA256 de99a5e45ecc8bc3b4d279495cd7befa08367660a71f36bf8fc34e5548b1197b SHA512 b420913dafd09e3b7cfea4d10d9a8c89fade2928e36c1fb072089d7f1ddc833634e72ef1b22e845a0f280d8def928982756119b32fd97a14b073f2d0a7a867cc WHIRLPOOL 7549a42e848ed58b343c5c6491e62addb505d75a2bfe8e06a0afde235c2151ffe0d0883de9d8046b3f2abfbb5981a33ec36b765d2baa875f9206a1040a605fcd
 EBUILD mozc-1.6.1187.102.ebuild 4151 SHA256 8a3dcb043725bc7d4289f2649e14f20196bc6ed00ccf5af648d308ec81bb97e4 SHA512 7d72dd7fe3520df151187bfcda42edf184671975fdb8188f80188b6cd3b370882787a36adeaedf33a6d6c2973f0b4addcb28edcfda69f32c5d1cab14417728b6 WHIRLPOOL e94eceeb63de930740f72ebae3abc25fab6cfce2303a7d22f4ec5d5e0c9cca3fc50796d035d1b5ede822e07f757c36ff084d5c3ee9630062e66e31a686d948ca
-EBUILD mozc-2.16.2037.102.ebuild 5775 SHA256 4ac90f83a167a73c333c3656f37c8dcbc505ee2175b0c6f8419beeabd54a8c86 SHA512 589b55dd528c795f266bc7710bc2aac4071be4aeeaef9600812ad46a6a7c67db52152c205e4915278b351d60b145c55915717051b5f2603a86f3897135c13545 WHIRLPOOL 033e1a2261effe1fee2dfef903af773f8150dfbdc27e8408c0600a26337e3419ecbc9435b3ce952b66c272a4b0fe90d31cdb4e0cc6a20fa2514d9864d8076164
-MISC ChangeLog 8002 SHA256 2eb8e63b47605844bda963d0d1fa0986728bca632170c8029f4de230b2665347 SHA512 80df6606c2cf77db80fd4a17cd768f896d4cd58cd70c9bc7d35104fb02be430952f62187417019346497c53397cd8fa6232bdb9481ee886517a07628d86e9b14 WHIRLPOOL e19b7bbbc560cbdcf7db666580c197b81cfa2f27a1c42a326cc5be793204896851c2e8f19745efaaa0884074a63224fff143daa47faf6ce26c6d8be2faa06ab6
-MISC metadata.xml 603 SHA256 e77d3254c53a7546df4dcde995975b713e7b7c1819e6361a98b8e0d1be183190 SHA512 5890a0bfd8e9a8584468a7bd8cd162e2135a6ca2f3c39a9a2da7bb3b1c64f77f18578241c4013da83dddf6af68817ebb02438d317996f8e712f4b6a17bf07c93 WHIRLPOOL 438f87eb3a1d199d931e0fadfad91e847f3f8e6f376e7b3d317ef2c77f278006078addee4162fd7816c81b75ca8a378bcec84e0f441c3bf73b89e95b6a38bcc3
+EBUILD mozc-2.16.2037.102.ebuild 6811 SHA256 337e2514e4a7e7cd0f509bf34d43e57b4b2a23118b1beb5d98d112bbc8ab90ab SHA512 642460e3e2c36bc7a309ff282d62a2a20e5744931ffece083d2e353dc8cedf9020e13cd4577571ed9b4f88d228d323b9b35555dc08fa6554c6c954aa2bc6e830 WHIRLPOOL cd69fda99b6ab83dbe049a2e6f2ddcdf14410da78b1571a01727863cc2412298db50e3c1baba9248a5ccfebc241f0e82866f2996b1da237fb597fbc2d2b8acac
+MISC ChangeLog 8150 SHA256 b8cd476987d11b2c6f1fb1588313cece50c6e2478c1c718b60e44a71c11c46ec SHA512 1fffb629b35df35f00c15fa8701521cd500de5f03da96ed0098dcf29b3a30f677456af3d03b72f8faec50e3ba229e8ab9e1eb456affff4913ffcb0bd2f5e73b2 WHIRLPOOL 070f4b5b02f6c8839b51e30725ed65c81aef06f72d3261a513735bfbcbd646180659752d25c2887f37443acde3ac81bb56ca82f8f752a30fa0ce62b4f2c44e4c
+MISC metadata.xml 676 SHA256 b72d337a5e00ee021b207a6fa17b215094422af2ce3402c16a1abbc00c87d223 SHA512 12c689ccf138bd7ff787b1875a71c243e8a2fd64101ef3b201a8ad8916625a91e67ce9dd53eae4b3121c6227ed9acd9193eeda56222c82ae3a7d4e4698fe33cc WHIRLPOOL a0ab8bc587b0303867acd08a56ccc31df391593cfc8a3709c73568784e0617ecf57cb076773e98a841e35198ad5624e04a6a5f79dc53e590148a9c3c0e2f8f80
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJU+UmaAAoJEDYO1FT4VRUUIp4P/jzsQfKPudmw17fJblnMITV0
-VT8Vm+D5UaBOxBTp16egCRcZyim7B+DMry5piz+TLew0IzXZ3o2TXjWJw00/vmOs
-36Pp/nli0B1RTFs+vWrnceilbNufDox4IJ4+EaiZcvVcmXSBIeZECXZ1pIT7h8Ps
-8rJ6yMyI7kuGSAbGfyVM4Q2o7mfbxwBqF4XkjKkIamDWX2AQkVBRzT2X3BYRslbL
-cFacdarpRgBOLG77rd8soHRzc40NBzMNUFOIkJVafW5KdaLjUCA8PoEbDpXc0z/x
-+SGjQiEkOji/U5kv8NVkPLzB0EWy6QcWT+ctPM5CCbnkloAONT8MhTk7sCZEqpX5
-56AP3X/F7sR8Z13mjWo128PRg1CAZ15eqOSoWyxO5soBr7TlV8yw4rH+RKJYT3pc
-1BKghcXRp90RsUfJ3+JFJj0AFpLLdZZ0TBCuJdB4CJlc1dnFu9o9vsi9+zDV8zfg
-P85UOaBw6PntVoJtrpx6LTMoEM4TPe12DKKesRwBbjD8rjFOvelViC/C98H3wH8n
-fF2lXknZsg69QjBSEOZc/o0j8nVH8EDK17q2oifZeD7/8WG2RgfqiuhFfscy6seJ
-35F5OO3hzg207hzFH6s+2ELRxUqls4F04l+5yqu0Ed33nTceinqieqLD3vfTjd0/
-7gNWc9o8WiSVp43Ne8vK
-=3Cym
+iQIcBAEBCAAGBQJU+YaTAAoJEDYO1FT4VRUUE5YQAJswZGbzqv4nIhwPzAQeaSvs
+lVMRFXYyKPsHXzcMTSD0sRNAUpoU9k89i4gQGPDW5UhSTdu6+Hz3lFm0Y16ZUS5X
+KnfGf2tmT85ZVUqMtA1pRgHE+ObTkUnET5KKZIBL29jFtTn6mdq4TlhFWvNyKQZj
+P2M2oIItBkXQdwICeKKZZuTBthgv1YpjEloaaH/JXVoAxM+1yOsrfEorNxfOJIhG
+25nu1YbNiWUxSgVO+1BYFmfOGoPt9h8MzWvZJCUyEel/8tGlcp4EqZ3uyvIYHd22
+JZ0AcMZjls3yzB05zPLF3jlBK3XBx5AD255/yHqwz60s1ApJkxg2OBKYfZHZkapB
+/NXoRE3OMk4Od8bxMQLNI6ShflAuHJ/fPS2l2prz3E1mxlewsX1X+jwcKX3lMTOL
+jMM8DtF/DtTnvGHoWLwPRZlZwS/ftzRvckUoGx83TzA0GYlQtsapostuRSTDAPUv
+AzKrO/mjwrNsUvtGGQLl7c/uXfRWdLk1H8Ftn+OPlzIal69NEDzCHSknVlzEbImR
+NZdYnZhAp9CsXvNuMVHSQCK1nP5DsCQ0RiNfFoy/wYXpNonSKZe3+BfNd8pKPM2V
+Fm6bqnw971Md5m4vcqYMRZ7qMV9gufzEGSiBPhd5pXkw10X7ho9iXFuZ1Z7FiXAu
+ohl6Df6wMS4ZuD++RkbT
+=rlAp
 -----END PGP SIGNATURE-----
