@@ -1,6 +1,10 @@
 # ChangeLog for app-i18n/mozc
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/mozc/ChangeLog,v 1.13 2015/03/06 06:30:28 naota Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/mozc/ChangeLog,v 1.14 2015/03/06 10:51:00 naota Exp $
+
+  06 Mar 2015; Naohiro Aota <naota@gentoo.org> metadata.xml,
+  mozc-2.16.2037.102.ebuild:
+  Add fcitx support #542070; Fix openssl slot dependency
 
   06 Mar 2015; Naohiro Aota <naota@gentoo.org> mozc-2.16.2037.102.ebuild:
   Add handwriting dependency; add Qt immodule dependency
